# vsplit

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
tests/: test_srt.py
tests/fixtures/: sample.srt
vsplit/: __init__.py  config.py  exporter.py  ffmpeg_utils.py  splitter.py  srt.py  whisper_extra.py
vsplit/llm/: __init__.py  custom_openai.py  qwen.py
