[project]
name = "vsplit"
version = "0.1.0"
description = "AI semantic video scene splitting via VL models + transcript fusion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "imageio-ffmpeg>=0.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
whisper = [
    "openai-whisper>=20231117",
]
scenedetect = [
    "scenedetect[opencv]>=0.6.4",
]
paraformer = [
    "funasr>=1.3.0",
    "modelscope",
    "soundfile>=0.12.1",
    "torch",
    "torchaudio",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vsplit"]
